# smart-shopping-assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt  todo.txt
agents/optimization/: agent.py
agents/query/: agent.py
agents/refinement/: agent.py
agents/response/: agent.py
agents/understanding/: agent.py
data/: example_promotions.csv  models.py  promotions-28-apr-25.csv  schema.py
docker/: Dockerfile  deploy_gcp.sh  docker_compose.yml
llm/: gemini_client.py
messaging/: __init__.py  telegram_bot.py  telegram_formatters.py  telegram_handlers.py  telegram_processors.py  telegram_states.py  whatsapp_bot.py
storage/: bigquery.py  bigquery_client.py  import_csv.py  operations.py
utils/: recommendation_adapter.py
